--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -28,7 +28,6 @@
       <td>{{ justus.julkaisu.julkaisunnimi }}</td>
     </tr>
 
-
     <!-- Tekijät -->
     <tr>
       <td class="condensed">{{ i18n.content.form.tekijat[lang] }}</td>
@@ -274,7 +273,7 @@
 
     <!-- Rinnakkaistallennetun version verkko-osoite -->
     <tr>
-      <td class="condensed">{{ i18n.content.form.rinnakkaistallennetunversionverkkoosoite[lang] }}</td>
+      <td class="condensed">{{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettumuualle.form.rinnakkaistallennetunversionverkkoosoite[lang ]}}</td>
       <td>{{ justus.julkaisu.rinnakkaistallennetunversionverkkoosoite }}</td>
     </tr>
 
@@ -286,7 +285,7 @@
 
     <!-- Julkaisu -->
     <tr>
-      <td class="condensed"> Julkaisu </td>
+      <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.julkaisu[lang] }} </td>
       <td>{{ filedata.filename }}</td>
     </tr>
 
