--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -289,6 +289,12 @@
       <td>{{ filedata.filename }}</td>
     </tr>
 
+    <!-- Julkaisu -->
+    <tr>
+      <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.abstrakti[lang] }} </td>
+      <td>{{ filedata.abstract }} </td>
+    </tr>
+
     <!-- URN -->
     <tr>
       <td class="condensed"> URN - tunnus </td>
