Fix bug with page number visibility

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -130,7 +130,7 @@
       <!-- Sivut -->
       <tr>
         <td class="condensed">{{ i18n.content.form.sivut[lang] }}</td>
-        <td>{{ justus.sivut }}</td>
+        <td>{{ justus.julkaisu.sivut }}</td>
       </tr>
 
       <!-- Artikkelinumero -->
