--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -273,7 +273,7 @@
 
     <!-- Rinnakkaistallennetun version verkko-osoite -->
     <tr>
-      <td class="condensed">{{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettumuualle.form.rinnakkaistallennetunversionverkkoosoite[lang ]}}</td>
+      <td class="condensed">{{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettumuualle.form.rinnakkaistallennetunversionverkkoosoite[lang]}}</td>
       <td>{{ justus.julkaisu.rinnakkaistallennetunversionverkkoosoite }}</td>
     </tr>
 
@@ -283,13 +283,14 @@
       <td>{{ justus.julkaisu.lisatieto }}</td>
     </tr>
 
+    <!-- Tiedoston syöttöön liittyvä data -->
     <!-- Julkaisu -->
     <tr>
       <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.julkaisu[lang] }} </td>
       <td>{{ filedata.filename }}</td>
     </tr>
 
-    <!-- Julkaisu -->
+    <!-- Abstrakti -->
     <tr>
       <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.abstrakti[lang] }} </td>
       <td>{{ filedata.abstract }} </td>
@@ -297,14 +298,32 @@
 
     <!-- URN -->
     <tr>
-      <td class="condensed"> URN - tunnus </td>
+      <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.urn[lang] }} </td>
       <td>{{ filedata.urn }}</td>
     </tr>
 
     <!-- Embargo -->
     <tr>
-      <td class="condensed"> Embarbo </td>
+      <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.embargo[lang] }} </td>
       <td>{{ filedata.embargo |  date: 'dd/MM/yyyy' }}</td>
+    </tr>
+
+    <!-- Oikeudet -->
+    <tr>
+      <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.oikeudet[lang] }} </td>
+      <td>{{ filedata.oikeudet }}  {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.oikeudet.value[filedata.oikeudet][lang] }}</td>
+    </tr>
+
+    <!-- Versio -->
+    <tr>
+      <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.versio[lang] }} </td>
+      <td>{{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.versio.value[filedata.versio][lang] }}</td>
+    </tr>
+
+    <!-- Julkaisusarja -->
+    <tr>
+      <td class="condensed"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.julkaisusarja[lang] }} </td>
+      <td>{{ filedata.julkaisusarja }}</td>
     </tr>
 
     </tbody>
