--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -32,7 +32,7 @@
                                 <div class="row">
                                     <div class="col-md-10">
                                         <span class="font-weight-bold text-xl">
-                                          <a data-ng-if="filedata.handle === ''" data-ng-href="{{ getLink()}}" target="_blank" download> {{filedata.filename}} </a>
+                                          <a data-ng-if="filedata.handle === ''" data-ng-href="{{ getLink()}}"> {{filedata.filename}} </a>
                                           <span data-ng-if="filedata.handle !== ''"> {{filedata.filename}} </span>
                                         </span>
                                     </div>
