Add translations and tooltips to self-archive section

--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -138,6 +138,11 @@
                                 <label class="control-label"
                                        data-ng-bind="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.oikeudet[lang]">
                                 </label>
+                                <i class="fa fa-info-circle justus-info"
+                                   data-popover-trigger="'mouseenter'" data-popover-placement="right"
+                                   data-uib-popover="{{i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.oikeudet.tooltip[lang]}}"
+                                   data-ng-show="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.oikeudet.tooltip[lang]">
+                                </i>
                             </div>
                             <div class="col-md-6 col-xs-12 form-group">
                                 <ui-select data-ng-model="filedata.oikeudet"
@@ -165,6 +170,11 @@
                                 <label class="control-label"
                                        data-ng-bind="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.versio[lang]">
                                 </label>
+                                <i class="fa fa-info-circle justus-info"
+                                   data-popover-trigger="'mouseenter'" data-popover-placement="right"
+                                   data-uib-popover="{{i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.versio.tooltip[lang]}}"
+                                   data-ng-show="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.versio.tooltip[lang]">
+                                </i>
                             </div>
                             <div class="col-md-6 col-xs-12 form-group">
                                 <ui-select data-ng-model="filedata.versio"
@@ -192,6 +202,11 @@
                                 <label class="control-label"
                                        data-ng-bind="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.julkaisusarja[lang]">
                                 </label>
+                                <i class="fa fa-info-circle justus-info"
+                                   data-popover-trigger="'mouseenter'" data-popover-placement="right"
+                                   data-uib-popover="{{i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.julkaisusarja.tooltip[lang]}}"
+                                   data-ng-show="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.julkaisusarja.tooltip[lang]">
+                                </i>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class="row">
