--- a/src/app/html/justus/vaihevuo.html
+++ b/src/app/html/justus/vaihevuo.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="col-md-5ths text-center" data-ng-class="{'col-xs-9':vaihe>=4, 'col-xs-1':vaihe!=4}">
-    <div class="justus-btn justus-btn-stage" data-ng-class="{selected:vaihe==4}" data-ng-click="useVaihe(4)">
+    <div class="justus-btn justus-btn-stage" data-ng-class="{selected:vaihe==4, disabled:vaihe<3}" data-ng-click="vaihe>=3?useVaihe(4):null">
       4 <span data-ng-if="showPublicationInput" data-ng-class="{'hidden-xs':vaihe!=4}" data-ng-bind="i18n.content.vaihevuo.julkaisunsyotto[lang]"></span>
       <span data-ng-if="!showPublicationInput" data-ng-class="{'hidden-xs':vaihe!=3}" data-ng-bind="i18n.content.vaihevuo.rinnakkaistallennus[lang]"></span>
 
