Change publication link icon

--- a/src/app/html/tarkasta.html
+++ b/src/app/html/tarkasta.html
@@ -115,7 +115,7 @@
           <td data-ng-if="showPublicationLink">
             <span data-ng-show="d.filedata">
               <a data-ng-href="{{d.filedata.handle}}" target="_blank">
-               <i class="fa fa-save" ng-class="{'text-gray': !d.filedata.handle }"> </i>
+               <i class="fa fa-link" ng-class="{'text-gray': !d.filedata.handle }"> </i>
               </a>
             </span>
           </td>
@@ -152,7 +152,7 @@
           <td data-ng-if="showPublicationLink">
             <span data-ng-show="d.filedata">
               <a data-ng-href="{{d.filedata.handle}}" target="_blank">
-               <i class="fa fa-save" ng-class="{'text-gray': !d.filedata.handle }"> </i>
+               <i class="fa fa-link" ng-class="{'text-gray': !d.filedata.handle }"> </i>
               </a>
             </span>
           </td>
